src/styles.scss
/* ... */
.business-title{
    h2{
        font-size: 20px;
        text-transform: capitalize;
        padding: 0;
        font-weight: 500;
        margin: 0;
        color: $primary-color;
        display: inline-block;
        font-family: 'Montserrat', sans-serif;
    }
    p{
        font-size: 13px;
        color: #414C59;
        text-transform: capitalize;
        margin-left: 1px;
    }
}
.business-table{
    background: $white-txt;;
    padding: 10px 15px;
    margin-bottom: 15px;
    .form-control{
        font-size: 13px;
        display: block;
        float: none;
        background: $white-txt;;
        padding: 6px 12px;
        color: #2b2f33;
        border: 1px solid #cccccc;
        box-shadow: inset 1px 1px 3px #f6f6f6;
    }
    label {
        font-weight: bold;
        color: #3e4855;
    }
    .input-group{
        margin-bottom: 10px;
    }
    .form-group{
        margin-bottom: 10px;
    }
}
.customer-report{
        border:1px solid $white-txt !important;

        .datatable-header {
            border-bottom: 1px solid hsl(216, 6%, 84%);
            margin-left:0px;
            width:100% !important;
            background: #f7f7f7;

                .datatable-header-cell{
                    border: 0px solid #d3d5d8;
                    color: $primary-text-color;
                    font-family: 'Montserrat', sans-serif;
                    font-weight: 600;
                    font-size: 13px;
                    width:100vw;
                    overflow: inherit !important;

                    &:first-child{
                    padding-left: 0px;
                }   
            }
        }
       .datatable-body-row {
            border-bottom: 1px solid #d3d5d8;
        .datatable-body-cell {
                border: 0px solid #d3d5d8;
                font-size: 13px;
                color: #67757c;
                font-family: 'Poppins', sans-serif;
                font-weight: 400;
                white-space: nowrap;
                width: 135px;
                max-width:100%;
        }
    }
    .datatable-body{
        width:100% !important;
        height: auto;
        .datatable-row-wrapper:nth-child(){
            width:100%;
        }
    }
    .datatable-header-cell-label {
        padding: .75rem 35px .75rem .75rem !important;
    }
}
.payment-report{
    width:98.5%;
        .form-group{
            margin-top: 10px;
        }
        .toggle{
            color: #2b2f33 !important;
            width:35px !important; 
        }
        .generate-button {
            padding: 7px 15px;
        }
        .card{
            margin-bottom: 8px;
            label {
                font-weight: bold;
                color: #3e4855;
            }
            .ng-select{
                width: 100%;
            }
        }  
}
.payment-table{
    .card-block {
        padding: 0px 15px 0;
    }
    .form-group{
        margin-bottom: 5px;
    }
    .card-header {
        padding: 15px 15px 8px 15px;
    }
    .header-title{
        position: relative;
    }
}
#pcoded{
        &[vertical-nav-type="offcanvas"] {
        .customer-report{
            .datatable-row-wrapper:nth-child(odd) {
                width: 100%;
            }
            .datatable-row-wrapper:nth-child(even) {
                width: 100%;
            }
            .datatable-body-cell{
                width:150px;
            }
        }
    }
}

// report //

.toggle{
    color: #2b2f33 !important;
    width:35px !important; 
}
.header-navbar {
    .navbar-wrapper {
        .navbar-container{
            .nav-right{
                 .user-profile img{
                    width: 33px;
                    height: 33px;
                    display:inline-block;
                 }
            }
        }
    }
 }
 .fixed-table{
    .card-block {
        padding: 0px 15px 0px 15px;
     }
 }

.tag-chips {
    delete-icon {
        svg{
            height: 30px !important;
        }
    }
}
.dt-picker{
    .form-control{
        &:focus{
            border-color: $primary-color !important;
        }
    }
}
.report-title.payment-report{
    .ng-select {
        div {
            .multiple{
                padding: 3px 10px !important;
            }
        }
    }
}
.hide-branch{
    display: none;
}
// consumer view //
.avatar-image{
    width: 150px;
    height: 150px;
    margin: 0 auto;
    line-height: 90px;
    max-width: 100%;
    .img-responsive{
        vertical-align: bottom;
    }
}
.keytype{
    .ng-select{
        width:100%;
        border: 0;
        border-bottom: 1px solid #b1b8bb;
        box-shadow: none;
    }
}
.checkbox-column{
    display: inline-flex;
    width: 100px;
}
.fav-title{
    h3{
        color: #2f3d4a;
        font-family: "Nunito", sans-serif;
    }
}
.business-select{
    .ng-select{
        width:100%;
    }
    textarea{
        width:100%;
    }
}
.pay-online{
    display: inline-block;
}

